<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/DisplayFragment">

    <action
        android:id="@+id/action_to_BluetoothFragment"
        app:destination="@id/BluetoothFragment" />
    <action
        android:id="@+id/action_to_WifiFragment"
        app:destination="@id/WifiFragment" />

    <fragment
        android:id="@+id/DisplayFragment"
        android:name="com.example.ventme.DisplayFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
    </fragment>
    <fragment
        android:id="@+id/BluetoothFragment"
        android:name="com.example.ventme.BluetoothFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_BluetoothFragment_to_DisplayFragment"
            app:destination="@id/DisplayFragment" />
    </fragment>
    <fragment
        android:id="@+id/WifiFragment"
        android:name="com.example.ventme.WifiFragment"
        android:label="@string/wifi_fragment_label"
        tools:layout="@layout/fragment_wifi">

        <action
            android:id="@+id/action_WifiFragment_to_DisplayFragment"
            app:destination="@id/DisplayFragment" />
    </fragment>
</navigation>
