<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayFragment">

    <LinearLayout
        android:id="@+id/infoboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/plotlayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/brnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/unknown"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/brview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/br"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/o2num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/unknown"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/o2view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/o2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/peepnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/unknown"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/peepview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/peep"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ienum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/unknown"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/ieview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ie"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/plotlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/infoboxes"
        app:layout_constraintBottom_toBottomOf="parent">

      <include
          android:id="@+id/plots"
          layout="@layout/simple_plot" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
